finalized stats methods with Rick, and added reference

--- a/Legacy.bib
+++ b/Legacy.bib
@@ -32,6 +32,17 @@ pmid = {27548312},
 title = {{A reference panel of 64,976 haplotypes for genotype imputation}},
 year = {2016}
 }
+@article{Benjamini2006,
+abstract = {S The linear step-up multiple testing procedure controls the false discovery rate at the desired level q for independent and positively dependent test statistics. When all null hypotheses are true, and the test statistics are independent and continuous, the bound is sharp. When some of the null hypotheses are not true, the procedure is conservative by a factor which is the proportion m 0 /m of the true null hypotheses among the hypotheses. We provide a new two-stage procedure in which the linear step-up procedure is used in stage one to estimate m 0 , providing a new level q∞ which is used in the linear step-up procedure in the second stage. We prove that a general form of the two-stage procedure controls the false discovery rate at the desired level q. This framework enables us to study analytically the properties of other procedures that exist in the literature. A simulation study is presented that shows that two-stage adaptive procedures improve in power over the original procedure, mainly because they provide tighter control of the false discovery rate. We further study the performance of the current suggestions, some variations of the procedures, and previous suggestions, in the case where the test statistics are positively dependent, a case for which the original procedure controls the false discovery rate. In the setting studied here the newly proposed two-stage procedure is the only one that controls the false discovery rate. The procedures are illustrated with two examples of biological importance. 1. I The traditional concern when testing m hypotheses simultaneously is to control the familywise error rate, the probability of making any false discovery. The restrictiveness of 492 Y. B, A. M. K  D. Y the familywise error rate criterion leads to multiple testing procedures that are not powerful in the sense that the probability of rejecting null hypotheses that are false must also be small. At the other extreme lies the strategy of ignoring the multiplicity issue altogether, and testing each hypothesis at level a. This is a popular approach which increases the probability of rejecting null hypotheses that are false, but ignores the increased expected number of type I errors. The false discovery rate criterion was developed by Benjamini {\&} Hochberg (1995) to bridge these two extremes. The false discovery rate is the expectation of the proportion of rejected true null hypotheses among the rejected hypotheses. When the null hypothesis is true for all hypotheses, the false discovery rate and familywise error rate criteria are equivalent. However, when there are some hypotheses for which the null hypotheses are false, a procedure that controls the false discovery rate may reject many more such hypotheses at the expense of a small proportion of erroneous rejections. The linear step-up procedure, or so-called Benjamini {\&} Hochberg procedure, controls the false discovery rate at a desired level qm 0 /m when the test statistics are independent (Benjamini {\&} Hochberg, 1995) or positively dependent (Benjamini {\&} Yekutieli, 2001). Even though this procedure rejects false null hypotheses more frequently than procedures that control the familywise error rate, if we knew m 0 the procedure could be improved by using q∞=qm/m 0 , to achieve precisely the desired level q. In this paper we develop and compare some adaptive false discovery rate controlling procedures that begin by estimating m 0 . In 2, we recall the formal definition of the false discovery rate criterion, the linear step-up procedure, and review the background for the problem at hand. 2. B 2{\textperiodcentered}1. T he false discovery rate Let H 0i (i=1, . . . , m) be the tested null hypotheses. For i=1, . . . , m 0 the null hypotheses are true, and for the remaining m 1 =m−m 0 the null hypotheses are false. Let V denote the number of true null hypotheses that are erroneously rejected and let R be the total number of hypotheses that are rejected. Now define the proportion of false discoveries by Q=V /R if R{\textgreater}0 and Q=0 if R=0. The false discovery rate is  =E(Q) (Benjamini {\&} Hochberg, 1995). A few recent papers have illuminated the false discovery rate from different points of view, namely asymptotic, Bayesian, empirical Bayes, as the limit of empirical processes and in the context of penalised model selection; see Efron et al. (2001), Storey (2002), Genovese {\&} Wasserman (2004) and Abramovich et al. (2006). Some of the studies emphasised variants of the false discovery rate, such as its conditional value given that some discovery is made (Storey, 2002), or the distribution of the proportion of false discoveries itself (Genovese {\&} Wasserman, 2004). Procedures were developed for specific settings (Troendle, 1999), and the applicability of existing procedures have been studied; see for example Sarkar (2002). The linear step-up procedure makes use of the m p-values, P=(P 1 , . . . , P m). Let p (1) ∏ . . . ∏p (m) be their ordered observed values.},
+author = {Benjamini, Yoav and Krieger, Abba M. and Yekutieli, Daniel},
+doi = {10.1093/biomet/93.3.491},
+isbn = {0006-3444},
+issn = {00063444},
+journal = {Biometrika},
+keywords = {False discovery rate,Multiple testing,Two-stage procedure},
+title = {{Adaptive linear step-up procedures that control the false discovery rate}},
+year = {2006}
+}
 @article{RDevelopmentCoreTeam2016,
 abstract = {R Development Core Team (2011). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. ISBN 3-900051-07-0, URL http://www.R-project.org/.},
 archivePrefix = {arXiv},
